--- a/src/sass/mixins/grid.scss
+++ b/src/sass/mixins/grid.scss
@@ -7,3 +7,9 @@
       }
    }
 }
+
+@mixin gapless {
+   [class*=col] {
+      padding: 0;      
+   }
+}
